# IBMPcEmu

./: CMakeLists.txt  buildtest.bat  buildtest.sh  config.bat  rom.asm  test.c  truthMachine.asm
src/: cpu8086.cpp  cpu8086.hpp  main.cpp  monochromeDisplay.cpp  monochromeDisplay.hpp  util.hpp
